<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SurfBoard</string>

    <!-- 마이크 버튼 설명 추가 -->
    <string name="desc_mic_button">마이크 버튼</string>

    <string name="desc_remote_feed">카메라 피드</string>
    <string name="desc_capture">사진 촬영</string>
    <string name="desc_spray">물 발사</string>

    <string name="open_drawer">메뉴 열기</string>
    <string name="close_drawer">메뉴 닫기</string>


    <string name="label_tts_voice">TTS 음성 선택</string>
    <string name="label_tts_rate_default">속도: 1.0</string>
    <string name="label_tts_pitch_default">피치: 1.0</string>
    <string name="desc_rate_slider">TTS 속도 조절 슬라이더</string>
    <string name="desc_pitch_slider">TTS 피치 조절 슬라이더</string>
    <string name="hint_tts_voice">음성을 선택하세요</string>







</resources>